--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -6,7 +6,7 @@
       <ion-label>Status</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="tab2">
+    <ion-tab-button tab="detail-view">
       <ion-icon name="bar-chart-outline"></ion-icon>
       <ion-label>Detail View</ion-label>
     </ion-tab-button>
