added about page, organized code

--- a/src/app/tabs/tab1/tab1.page.html
+++ b/src/app/tabs/tab1/tab1.page.html
@@ -58,6 +58,6 @@
     </ion-card-content>
   </ion-card>
   <ion-text>
-    <p class="lastUpdate">Last updated on {{fetchedData.lastUpdate}}</p>
+    <p class="lastUpdate">Last updated on {{date}}</p>
   </ion-text>
 </ion-content>
