--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -10,6 +10,11 @@
       <ion-icon name="bar-chart-outline"></ion-icon>
       <ion-label>Detail View</ion-label>
     </ion-tab-button>
+
+    <ion-tab-button tab="about-page">
+      <ion-icon name="help-circle-outline"></ion-icon>
+      <ion-label>About Page</ion-label>
+    </ion-tab-button>
   </ion-tab-bar>
 
 </ion-tabs>
